大幅度重构java，增加single.txt，illustration.txt。collection.csv增加字段
Former-commit-id: 7603edf5ff880925d2e8e28f9232f6e0ddd30520
Former-commit-id: b9d6f818a4e06c34bc37f94d2e553748fa419fd8
Former-commit-id: 9515771a0bd3a05a4124b0d8c39b6c31ada4c8ee