@@ -7,6 +7,7 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
+import java.net.URL;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.file.Files;
@@ -20,14 +21,14 @@ import java.util.zip.ZipInputStream;
 
 public class PhigrosUser {
     public String session;
-    public URI saveUrl;
+    public URL saveUrl;
     final static TreeMap<String, float[]> info = new TreeMap<>();
     public PhigrosUser(String session) {
         if (!session.matches("[a-z0-9]{25}"))
             throw new RuntimeException("SessionToken格式错误。");
         this.session = session;
     }
-    public PhigrosUser(URI saveUrl) {this.saveUrl = saveUrl;}
+    public PhigrosUser(URL saveUrl) {this.saveUrl = saveUrl;}
     public static void readInfo(BufferedReader reader) throws IOException {
         info.clear();
         String lineString;
@@ -35,7 +36,7 @@ public class PhigrosUser {
             String[] line = lineString.split(",");
             if (line.length != 4 && line.length != 5)
                 throw new RuntimeException(String.format("曲目%s的定数数量错误。", line[0]));
-            final var difficulty = new float[line.length - 1];
+            final float[] difficulty = new float[line.length - 1];
             for (int i = 0; i < line.length - 1; i++) {
                 difficulty[i] = Float.parseFloat(line[i + 1]);
             }
@@ -43,23 +44,23 @@ public class PhigrosUser {
         }
     }
     static float[] getInfo(String id) {
-        final var songInfo = info.get(id);
+        final float[] songInfo = info.get(id);
         if (songInfo == null)
             throw new RuntimeException(String.format("缺少%s的信息。", id));
         return songInfo;
     }
 
-    public JSONObject getSaveInfo() throws IOException, InterruptedException {
+    public JSONObject getSaveInfo() throws IOException {
         return SaveManager.saveCheck(session);
     }
 
-    public String getPlayerId() throws IOException, InterruptedException {
+    public String getPlayerId() throws IOException {
         return SaveManager.getPlayerId(session);
     }
 
-    public Summary update() throws IOException, InterruptedException {
+    public Summary update() throws IOException {
         JSONObject json = SaveManager.save(session);
-        saveUrl = URI.create(json.getJSONObject("gameFile").getString("url"));
+        saveUrl = new URL(json.getJSONObject("gameFile").getString("url"));
         Logger.getGlobal().info(saveUrl.toString());
         Summary summary = new Summary(json.getString("summary"));
         summary.updatedAt = json.getInstant("updatedAt");
@@ -67,16 +68,16 @@ public class PhigrosUser {
         return summary;
     }
 
-    public SongLevel[] getBestN(int num) throws IOException, InterruptedException {
+    public SongLevel[] getBestN(int num) throws IOException {
         return new B19(extractZip(GameRecord.class)).getB19(num);
     }
-    public SongExpect[] getExpect(String id) throws IOException, InterruptedException {
+    public SongExpect[] getExpect(String id) throws IOException {
         return new B19(extractZip(GameRecord.class)).getExpect(id);
     }
-    public SongExpect[] getExpects() throws IOException, InterruptedException {
+    public SongExpect[] getExpects() throws IOException {
         return new B19(extractZip(GameRecord.class)).getExpects();
     }
-    public <T extends SaveModule> T get(Class<T> clazz) throws IOException, InterruptedException {
+    public <T extends SaveModule> T get(Class<T> clazz) throws IOException {
         try {
             T saveModule = clazz.getDeclaredConstructor().newInstance();
             saveModule.loadFromBinary(extractZip(clazz));
@@ -91,21 +92,15 @@ public class PhigrosUser {
         saveManagement.uploadZip();
     }
 
-    public <T extends SaveModule> void modify(Class<T> clazz, ModifyStrategy<T> strategy, JSONObject saveInfo) throws IOException, InterruptedException {
-        SaveManager saveManagement = new SaveManager(this, saveInfo);
-        saveManagement.modify(clazz, strategy);
-        saveManagement.uploadZip();
-    }
-
-    public void downloadSave(Path path) throws IOException, InterruptedException {
+    public void downloadSave(Path path) throws IOException {
         Files.write(path,getData(), StandardOpenOption.CREATE, StandardOpenOption.WRITE);
     }
-    public void uploadSave(Path path) throws IOException, InterruptedException {
+    public void uploadSave(Path path) throws IOException {
         SaveManager saveManager = new SaveManager(this);
         saveManager.data = Files.readAllBytes(path);
         saveManager.uploadZip();
     }
-    private <T extends SaveModule> byte[] extractZip(Class<T> clazz) throws IOException, InterruptedException {
+    private <T extends SaveModule> byte[] extractZip(Class<T> clazz) throws IOException {
         byte[] buffer;
         try (ByteArrayInputStream reader = new ByteArrayInputStream(getData())) {
             try (ZipInputStream zipReader = new ZipInputStream(reader)) {
@@ -131,9 +126,9 @@ public class PhigrosUser {
         }
         return SaveManager.decrypt(buffer);
     }
-    private byte[] getData() throws IOException, InterruptedException {
-        HttpResponse<byte[]> response = SaveManager.client.send(HttpRequest.newBuilder(saveUrl).build(),HttpResponse.BodyHandlers.ofByteArray());
-        if (response.statusCode() == 404) throw new RuntimeException("存档文件不存在");
-        return response.body();
+    private byte[] getData() throws IOException {
+        HttpConnection connection = new HttpConnection(saveUrl);
+        if (connection.connect() == 404) throw new RuntimeException("存档文件不存在");
+        return connection.bytes();
     }
 }
